<package format="2">
  <name>ur_rh</name>
  <version>1.0.1</version>
  <description>ROS packages for Universal Robot with RH-P12-RN gripper</description>

  <author email="jhshim@robotis.com">Ryan Shim</author>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/ur_rh</url>
  <maintainer email="jhshim@robotis.com">Ryan Shim</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>ur_rh_bringup</exec_depend>
  <exec_depend>ur_rh_description</exec_depend>
  <exec_depend>ur_rh_gazebo</exec_depend>
  <exec_depend>ur_rh_gui</exec_depend>
  <exec_depend>ur_rh_moveit_config</exec_depend>

  <export><metapackage/></export>
</package>
